2001-09-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* animate.cc: fixed division by zero in the 'bubbles' animation

2001-09-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Configuration.cc, keyring.cc: added missing #include
	* objs/contain.cc: save correct dead-body-npc-number in SI
	* readnpcs.cc: only skip SI NPCs >= 233 (instead of >= 231)
	
2001-09-20  Ryan Nunn <triforce@merlin.net.au>
	* audio/Midi.h : Fixed the crash when saving a game with midi disabled
	* keyactions.cc, readnpcs.cc, conf/Configuration.cc,
	  usecode/keyring.cc, usecode/ucinternal.cc: Replaced catch(...) with
	  catch (exult_exception &e)

2001-09-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fixed crash when saving with sound disabled
	* utils.h: added Write4s (s = signed)
	* ucinternal.cc: cleared up error message

2001-09-20  Max Horn  <max@quendi.de>
	* audio/midi_drivers/mac_midi.cc: made compile with OS X 10.1
	* files/listfiles.cc: unix implementation of U7ListFiles now properly
	uses globfree, making it work properly on OS X
	* Makefile.am: small change to bundle code
	* configure.in: changed to use AC_EXEEXT

2001-09-20  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Set mask to find any obj. in find_closest(); fixes
	barge bug.
	* effects.cc:  Text effect follows object when it moves.

2001-09-19  Ryan Nunn <triforce@merlin.net.au>
	* actorio.cc : Finally save all flags for actors
	* exult.cc : Improved rendering timing and palette cycling timing
	* objs/animate.cc : Improved Frame_animator timing
	* gumps/gump_utils.h : Changed delay to 1/100 sec from 1/50 sec
	* gamewin.cc,  usecode/ucsched.cc, usecode/ucsched.h,
	  msvcstuff/msvc_kludges.h : Misc changes.

2001-09-19  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/contain.cc (Container_game_object): Fixed bug in
	remove_quantity() where all items weren't being removed.

	* gamewin.cc:  Save/restore Usecode scripts.