@@ -1,3 +1,7 @@
+2001-09-21  Max Horn  <max@quendi.de>
+	* mapedit/Makefile.am: GTK_LIBS value from gtk-config is now used;
+	fixed strange make warning (not really sure why this fix helps)
+
 2001-09-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* animate.cc: fixed division by zero in the 'bubbles' animation
 
